--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bootstrap-learning</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+	<h1>Цапля</h1>
 <script src="js/script.js"></script>
 </body>
 </html>
