Добавил хэдэр. Выполнил flex-верстку вместо бутстрап. Сделал плавное всплытие фиксирующегося меню

--- a/index.html
+++ b/index.html
@@ -2,12 +2,55 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bootstrap-learning</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<h1>Цапля</h1>
+	<header id="header" class="header">
+		<div class="flex-container">
+			<div class="logo"><a href="#"><img src="img/logo.jpg" alt="logo" width="100"></a></div>
+			<div class="tel"><a href="#">926-70-90</a></div>
+			<div class="head-btn"><button>Записаться</button></div>
+		</div>
+	</header>
+	<div class="wrapper">
+		<section id="features" class="features">
+			<div class="container">
+				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis minima, dicta molestiae reprehenderit enim temporibus ad, culpa. Cupiditate similique dolorem, quasi obcaecati, sint explicabo fugiat est recusandae debitis laborum culpa.</div>
+				<div>Architecto nostrum excepturi et, quibusdam labore atque, sint assumenda id consequatur tempora repellendus illum animi doloremque reiciendis recusandae repudiandae molestias libero soluta inventore, hic ut delectus odio! Omnis, mollitia, nam?</div>
+				<div>Ab nisi velit tenetur voluptate totam beatae, architecto quod nobis dignissimos ipsum laborum aspernatur exercitationem delectus nam voluptas mollitia obcaecati excepturi animi. Facere aperiam repudiandae eius minima, nostrum eveniet dolore.</div>
+				<div>Perferendis, tempore, neque ipsa corporis deserunt porro incidunt in provident impedit error nam, repellendus ratione mollitia a placeat nisi dolor. Accusantium laudantium cumque expedita dicta labore repellendus dolorum velit officia!</div>
+				<div>Laboriosam optio rem tempora, dolorem ullam odio necessitatibus nobis fugit, quis, quae nostrum, voluptates quidem. Quasi saepe soluta esse quia quo aliquid, asperiores rerum dicta reprehenderit provident ab laboriosam, iusto.</div>
+				<div>Molestiae laborum porro pariatur cupiditate. Impedit in hic, soluta repellendus accusamus laborum sint earum inventore, error ipsa maiores placeat numquam facere incidunt amet consectetur nihil expedita dolor voluptas debitis itaque.</div>
+				<div>Quae quos minima animi atque quod nulla eum aut perspiciatis labore, architecto, aspernatur consequatur error distinctio. Inventore non in temporibus, ipsum aperiam optio quibusdam recusandae corrupti eos quia, fugiat doloremque.</div>
+				<div>Quam eos quaerat quod, deleniti debitis adipisci hic veniam facilis sint non nulla cupiditate, beatae modi perspiciatis architecto molestias fuga commodi sunt et. Placeat assumenda ad eligendi quasi, molestias, architecto.</div>
+				<div>Iusto dolorem quisquam porro autem, facere id vel, asperiores earum illum hic fugiat voluptate molestias tempore magnam amet, voluptatibus facilis iure enim vitae doloribus error et est ex. Cumque, voluptatum.</div>
+				<div>Debitis vitae iste expedita incidunt a consectetur quos explicabo amet nihil harum possimus quaerat optio, aliquid quidem reiciendis error suscipit sunt iusto! Consectetur mollitia error quae, non sunt cum perferendis!</div>
+				<div>Neque totam accusantium, laudantium veniam facere, delectus nemo voluptatum quia dolores. Debitis quod, sit omnis. Qui odit dolorem voluptas fugit, voluptates modi delectus, fuga soluta porro natus necessitatibus doloremque harum.</div>
+				<div>Quidem, dolorum, ipsa! Accusantium sapiente nulla sed, possimus sunt officia illo aut, modi, inventore rerum nesciunt voluptatem asperiores. Vitae soluta quae, impedit id porro quod facilis voluptatem voluptate inventore ex!</div>
+				<div>Voluptas magnam facilis nihil libero adipisci quos maxime atque et eveniet ipsum officiis nulla suscipit, doloribus nobis officia perspiciatis non optio enim nisi deserunt, ut fuga. Doloribus recusandae sapiente vero.</div>
+				<div>Doloremque et excepturi explicabo quos, nostrum maxime a consequatur. Nulla architecto pariatur expedita illo eos fugiat nihil, est facere rem. Quidem, fugit sunt illum ex porro aspernatur hic facere quam?</div>
+				<div>Corrupti tempore, incidunt sed quasi atque quod laboriosam numquam rerum modi eius maxime beatae facere excepturi libero, a unde alias ullam laudantium eos dolore omnis error, voluptates doloremque. Blanditiis, repellat?</div>
+				<div>In sit tempora perferendis est repellendus, ratione natus iure facere, voluptatem ipsum inventore. Laboriosam debitis iste dolores facilis quaerat placeat cupiditate, dicta eius et quo iure autem eaque! Consequuntur, dolores.</div>
+				<div>Atque debitis sapiente error alias recusandae quaerat ut nulla veritatis delectus expedita at, eveniet laudantium, voluptatem consequatur cumque, quam animi in facilis incidunt iure quae. Quo eaque nesciunt hic consequuntur!</div>
+				<div>Quod blanditiis possimus praesentium nemo ratione recusandae aperiam asperiores, repudiandae tempora magnam nam omnis, et dignissimos sint laudantium odit error id vitae cum. Nobis asperiores aliquid odio dicta, dolorum accusamus.</div>
+				<div>Deleniti, dolores. Ex, praesentium. Veritatis quisquam vitae id. Sunt adipisci explicabo, in recusandae blanditiis odit labore. Amet perferendis, itaque architecto maxime eligendi quam, aperiam explicabo ratione veritatis praesentium voluptates, non?</div>
+				<div>Dignissimos asperiores error blanditiis praesentium vitae nobis libero architecto sit, sint eius distinctio odio quia ea obcaecati facilis nisi 
+			</div>
+		</section>
+		<section id="about" class="about">
+			<div class="container">
+				
+			</div>
+		</section>
+		<footer id="footer" class="footer">
+			<div class="container">
+				
+			</div>
+		</footer>
+	</div>
+
 <script src="js/script.js"></script>
 </body>
 </html>
