--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bootstrap-learning</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/effects/slide.css">
 </head>
 <body>
 	<header id="header" class="header">
@@ -52,5 +53,6 @@
 	</div>
 
 <script src="js/script.js"></script>
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
